--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ option(WITH_GPU "Enable CUDA code" ON)
 option(WITH_DOUBLE_PRECISION "Use double precision for CUDA only" ON)
 
 if(WITH_GPU)
-  message("Compiling with GPU code.")
+  message(STATUS "Compiling with GPU code. CMAKE_CUDA_ARCHITECTURES = ${CMAKE_CUDA_ARCHITECTURES}")
   add_definitions(-DUSE_GPU)
   project(kcGMLMProject LANGUAGES CXX CUDA)
 else()
@@ -24,5 +24,5 @@ else()
   add_definitions(-DUSE_SINGLE_PRECISION)
 endif()
 
-add_subdirectory(src)
-add_subdirectory(src/pysrc)
+add_subdirectory(src/pyNeuroGMLM/pyGMLMcuda/kcGMLMcuda)
+add_subdirectory(src/pyNeuroGMLM/pyGMLMcuda)
