fixing cmakelists.txt for cuda architecture check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,34 @@
 cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 
-if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
-  set(CMAKE_CUDA_ARCHITECTURES 75)
-endif()
-
+project(kcGMLMProject LANGUAGES CXX)
 
 option(WITH_GPU "Enable CUDA code" ON)
 option(WITH_DOUBLE_PRECISION "Use double precision for CUDA only" ON)
 
 if(WITH_GPU)
-  message(STATUS "Compiling with GPU code. CMAKE_CUDA_ARCHITECTURES = ${CMAKE_CUDA_ARCHITECTURES}")
+  include(CheckLanguage)
+  check_language(CUDA)
+  if(NOT CMAKE_CUDA_COMPILER)
+    message(WARNING "CUDA not found: disabling GPU code.")
+    set(WITH_GPU OFF CACHE BOOL "Enable CUDA code" FORCE)
+  endif()
+endif()
+
+if(WITH_GPU)
+  message("Compiling with GPU code.")
+  
+  enable_language(CUDA)
+
+  if(CMAKE_CUDA_COMPILER_VERSION LESS 11.5)
+    message(FATAL_ERROR "Requires CUDA version 11.5 or greater.") # not sure why cmake_minimum_required didn't work
+  endif()
   add_definitions(-DUSE_GPU)
-  project(kcGMLMProject LANGUAGES CXX CUDA)
+  if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
+    set(CMAKE_CUDA_ARCHITECTURES 75)
+  endif()
+  message(STATUS "CMAKE_CUDA_ARCHITECTURES = ${CMAKE_CUDA_ARCHITECTURES}")
 else()
   message("GPU code disabled.")
-  project(kcGMLMProject LANGUAGES CXX)
 endif()
 
 if(WITH_DOUBLE_PRECISION)
