--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,19 @@ if(WITH_GPU)
   endif()
   add_definitions(-DUSE_GPU)
   if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
-    set(CMAKE_CUDA_ARCHITECTURES 75)
+    include(FindCUDA/select_compute_arch)
+    CUDA_DETECT_INSTALLED_GPUS(INSTALLED_GPU_CCS_1)
+    string(STRIP "${INSTALLED_GPU_CCS_1}" INSTALLED_GPU_CCS_2)
+    string(REPLACE " " ";" INSTALLED_GPU_CCS_3 "${INSTALLED_GPU_CCS_2}")
+    string(REPLACE "." "" CUDA_ARCH_LIST "${INSTALLED_GPU_CCS_3}")
+    #message(STATUS "INSTALLED_GPU_CCS_1 = ${INSTALLED_GPU_CCS_1}")
+    if( INSTALLED_GPU_CCS_1 LESS 61)
+      message(STATUS "No GPU found with CUDA architecture >= 6.1. Using default value.")
+      SET(CMAKE_CUDA_ARCHITECTURES 61)
+    else()
+      message(STATUS "Using detected CUDA architecture from first GPU.")
+      SET(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCH_LIST})
+    endif()
   endif()
   message(STATUS "CMAKE_CUDA_ARCHITECTURES = ${CMAKE_CUDA_ARCHITECTURES}")
 else()
