updating cmake architecture detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ if(WITH_GPU)
   endif()
   add_definitions(-DUSE_GPU)
   if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
+    # tries to detect a CUDA architecture (I think this should be set if a GPU is installed - this section might be unnecessary)
     include(FindCUDA/select_compute_arch)
     CUDA_DETECT_INSTALLED_GPUS(INSTALLED_GPU_CCS_1)
     string(STRIP "${INSTALLED_GPU_CCS_1}" INSTALLED_GPU_CCS_2)
