--- a/src/pyNeuroGMLM/pyGMLMcuda/CMakeLists.txt
+++ b/src/pyNeuroGMLM/pyGMLMcuda/CMakeLists.txt
@@ -4,10 +4,11 @@ find_package(pybind11 CONFIG REQUIRED)
 include_directories(kcGMLMcuda/)
 link_directories(${kcGMLMProject_SOURCE_DIR}/obj/)
 #link_directories(.)
+find_package(CUDAToolkit REQUIRED)
 
 if(WITH_GPU)
     pybind11_add_module(pyNeuroGMLMcuda MODULE  kcGMLMPython.cpp kcGMLMPython_glm.cpp)
-    target_link_libraries(pyNeuroGMLMcuda PRIVATE  kcGMLM  -lcuda -lcudadevrt -lcudart  -lcusparse -lcublas)
+    target_link_libraries(pyNeuroGMLMcuda PRIVATE  kcGMLM  CUDA::cuda_driver CUDA::cudadevrt CUDA::cudart  CUDA::cusparse CUDA::cublas)
 else()
     pybind11_add_module(pyNeuroGMLMcuda MODULE  kcGMLMPython.cpp kcGMLMPython_glm.cpp)
 endif()
