deteting environment variables because of weird pip issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,15 +6,12 @@ option(WITH_GPU "Enable CUDA code" ON)
 option(WITH_DOUBLE_PRECISION "Use double precision for CUDA only" ON)
 
 
-message(" ENVVAR $ENV{GMLM_WITH_GPU}")
 
 if(DEFINED ENV{GMLM_WITH_GPU})
   set(WITH_GPU $ENV{GMLM_WITH_GPU} CACHE BOOL "Enable CUDA code" FORCE)
-  message(" ENVVAR2 $ENV{GMLM_WITH_GPU}")
-  message(" ENVVAR3 ${WITH_GPU}")
 endif()
 if(DEFINED ENV{GMLM_WITH_DOUBLE_PRECISION})
-  set(WITH_DOUBLE_PRECISION ENV{GMLM_WITH_DOUBLE_PRECISION} CACHE BOOL "Enable CUDA code" FORCE)
+  set(WITH_DOUBLE_PRECISION $ENV{GMLM_WITH_DOUBLE_PRECISION} CACHE BOOL "Enable CUDA code" FORCE)
 endif()
 
 if(WITH_GPU)
