changing default behavior for compile to disable GPU if CUDA < 11.5 instead of erroring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,25 +29,27 @@ if(WITH_GPU)
   enable_language(CUDA)
 
   if(CMAKE_CUDA_COMPILER_VERSION LESS 11.5)
-    message(FATAL_ERROR "Requires CUDA version 11.5 or greater.") # not sure why cmake_minimum_required didn't work
-  endif()
-  add_definitions(-DUSE_GPU)
-  if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
-    # tries to detect a CUDA architecture (I think this should be set if a GPU is installed - this section might be unnecessary)
-    include(FindCUDA/select_compute_arch)
-    CUDA_DETECT_INSTALLED_GPUS(INSTALLED_GPU_CCS_1)
-    string(STRIP "${INSTALLED_GPU_CCS_1}" INSTALLED_GPU_CCS_2)
-    string(REPLACE " " ";" INSTALLED_GPU_CCS_3 "${INSTALLED_GPU_CCS_2}")
-    string(REPLACE "." "" CUDA_ARCH_LIST "${INSTALLED_GPU_CCS_3}")
-    if( INSTALLED_GPU_CCS_1 LESS 61)
-      message(STATUS "No GPU found with CUDA architecture >= 6.1. Using default value.")
-      SET(CMAKE_CUDA_ARCHITECTURES 61)
-    else()
-      message(STATUS "Using detected CUDA architecture from first GPU.")
-      SET(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCH_LIST})
+    message(STATUS "Requires CUDA version 11.5 or greater (found ${CMAKE_CUDA_COMPILER_VERSION}). Disabling GPU code.") # not sure why cmake_minimum_required didn't work
+    set(WITH_GPU OFF CACHE BOOL "Enable CUDA code" FORCE)
+  else()
+    add_definitions(-DUSE_GPU)
+    if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
+      # tries to detect a CUDA architecture (I think this should be set if a GPU is installed - this section might be unnecessary)
+      include(FindCUDA/select_compute_arch)
+      CUDA_DETECT_INSTALLED_GPUS(INSTALLED_GPU_CCS_1)
+      string(STRIP "${INSTALLED_GPU_CCS_1}" INSTALLED_GPU_CCS_2)
+      string(REPLACE " " ";" INSTALLED_GPU_CCS_3 "${INSTALLED_GPU_CCS_2}")
+      string(REPLACE "." "" CUDA_ARCH_LIST "${INSTALLED_GPU_CCS_3}")
+      if( INSTALLED_GPU_CCS_1 LESS 61)
+        message(STATUS "No GPU found with CUDA architecture >= 6.1. Using default value.")
+        SET(CMAKE_CUDA_ARCHITECTURES 61)
+      else()
+        message(STATUS "Using detected CUDA architecture from first GPU.")
+        SET(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCH_LIST})
+      endif()
     endif()
+    message(STATUS "CMAKE_CUDA_ARCHITECTURES = ${CMAKE_CUDA_ARCHITECTURES}")
   endif()
-  message(STATUS "CMAKE_CUDA_ARCHITECTURES = ${CMAKE_CUDA_ARCHITECTURES}")
 else()
   message("GPU code disabled.")
 endif()
