GPU detection functions in package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,13 @@ option(WITH_DOUBLE_PRECISION "Use double precision for CUDA only" ON)
 
 
 if(DEFINED ENV{GMLM_WITH_GPU})
+  message(STATUS "Setting WITH_GPU option from environmental variable (GMLM_WITH_GPU).")
   set(WITH_GPU $ENV{GMLM_WITH_GPU} CACHE BOOL "Enable CUDA code" FORCE)
+
 endif()
 if(DEFINED ENV{GMLM_WITH_DOUBLE_PRECISION})
-  set(WITH_DOUBLE_PRECISION $ENV{GMLM_WITH_DOUBLE_PRECISION} CACHE BOOL "Enable CUDA code" FORCE)
+  message(STATUS "Setting WITH_DOUBLE_PRECISION option from environmental variable (GMLM_WITH_DOUBLE_PRECISION).")
+  set(WITH_DOUBLE_PRECISION $ENV{GMLM_WITH_DOUBLE_PRECISION} CACHE BOOL "EUse double precision for CUDA only" FORCE)
 endif()
 
 if(WITH_GPU)
@@ -40,8 +43,8 @@ if(WITH_GPU)
       string(STRIP "${INSTALLED_GPU_CCS_1}" INSTALLED_GPU_CCS_2)
       string(REPLACE " " ";" INSTALLED_GPU_CCS_3 "${INSTALLED_GPU_CCS_2}")
       string(REPLACE "." "" CUDA_ARCH_LIST "${INSTALLED_GPU_CCS_3}")
-      if( INSTALLED_GPU_CCS_1 LESS 61)
-        message(STATUS "No GPU found with CUDA architecture >= 6.1. Using default value.")
+      if( CUDA_ARCH_LIST LESS 61)
+        message(STATUS "No GPU found with CUDA architecture >= 6.1 (version indenfitied = ${CUDA_ARCH_LIST}). Using default value.")
         SET(CMAKE_CUDA_ARCHITECTURES 61)
       else()
         message(STATUS "Using detected CUDA architecture from first GPU.")
